--- a/src/app/admin/manage-canho/canho/add-cudan/add-cudan.component.html
+++ b/src/app/admin/manage-canho/canho/add-cudan/add-cudan.component.html
@@ -111,7 +111,7 @@
             (linkFile)="getImage($event)"></ngx-uploader>
         </p>
         <p>
-          <img [src]="this.cuDanAddForm.get('hinhAnh').value"
+          <img [src]="this.cuDanAddForm.get('image').value"
             style="padding-top: 8px; border-radius: 8%; height: 197px; width: 205px">
         </p>
       </div>
