--- a/src/app/admin/manage-canho/profile/profile.component.html
+++ b/src/app/admin/manage-canho/profile/profile.component.html
@@ -26,7 +26,7 @@
                 Tên tài khoản: {{loginResponse.username}}
               </h5>
               <h6>
-                Chức vụ: {{role === 'Admin' ? 'Quản trị viên' : 'Khách hàng'}}
+                Chức vụ: {{role === 'Staff_bql' ? 'Quản trị viên' : 'Khách hàng'}}
               </h6>
               <p class="proile-rating" *ngIf="canHo!= null">Căn hộ :
                 <span>{{canHo.tenCanHo}}</span>
