--- a/src/app/admin/manage-phongban/nhan-vien-profile/nhan-vien-profile.component.html
+++ b/src/app/admin/manage-phongban/nhan-vien-profile/nhan-vien-profile.component.html
@@ -26,7 +26,7 @@
                 Tên tài khoản: {{profileResponse.userName}}
               </h5>
               <h6>
-                Chức vụ: {{profileResponse.role === 'Admin' ? 'Quản trị viên' : 'Nhân viên'}}
+                Chức vụ: {{profileResponse.role === 'Staff_bql' ? 'Quản trị viên' : 'Nhân viên'}}
               </h6>
               <p class="proile-rating">Cơ sở làm việc :
                 <span>{{profileResponse.homeStayName == null ? 'Tổng quản lý' : profileResponse.homeStayName}}</span>
