--- a/src/app/admin/manage-statistics/statistics-shared/statistics-shared.component.html
+++ b/src/app/admin/manage-statistics/statistics-shared/statistics-shared.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="this.role == 'Admin'">
+<div class="row" *ngIf="this.role == 'Staff_bql'">
   <div class="col-lg-6">
     <nb-card>
       <nb-card-header>Độ tuổi của cư dân</nb-card-header>
