--- a/src/app/admin/manage-hoadon/type-utility/hoadon-list.component.html
+++ b/src/app/admin/manage-hoadon/type-utility/hoadon-list.component.html
@@ -62,6 +62,11 @@
               {{element.trangThai ? "Đã thanh toán" : ""}}
             </td>
           </ng-container>
+          <ng-container matColumnDef="canHo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Căn hộ </th>
+            <td mat-cell *matCellDef="let element;let i = index"
+              routerLink="/admin/manage-canho/detail/{{element.canHo.id}}"> {{element.canHo.tenCanHo}} </td>
+          </ng-container>
           <ng-container matColumnDef="expandedDetail">
             <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
               <div class="example-element-detail" *ngIf="element.trangThai == true"
