--- a/src/app/admin/manage-statistics/dich-vu-sua-chua/dich-vu-sua-chua.component.html
+++ b/src/app/admin/manage-statistics/dich-vu-sua-chua/dich-vu-sua-chua.component.html
@@ -32,7 +32,7 @@
   <ng-container matColumnDef="trangThai">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Trạng Thái </th>
     <td mat-cell *matCellDef="let element">
-      <button *ngIf="element.trangThai == false && role == 'Admin'" mat-icon-button color="primary"
+      <button *ngIf="element.trangThai == false && role == 'Staff_bql'" mat-icon-button color="primary"
         (click)="openAddDichVu(element.id)">
         Thanh toán
       </button>
