--- a/src/app/shared/@theme/components/header/header.component.html
+++ b/src/app/shared/@theme/components/header/header.component.html
@@ -1,14 +1,15 @@
 <div class="header-container">
-  <a *ngIf="this.role === 'Admin' || this.role === 'User'" (click)="toggleSidebar()" href="#" class="sidebar-toggle">
+  <a *ngIf="this.role === 'Staff_bql' || this.role === 'User'" (click)="toggleSidebar()" href="#"
+    class="sidebar-toggle">
     <nb-icon icon="menu-2-outline"></nb-icon>
   </a>
   <a class="logo"
-    (click)="navigateHome()"><span>{{role === 'User' ? 'Khách hàng  ' : role === 'Admin' ? 'Quản trị viên' : role === 'Member' ? 'Thành viên' : ''}}</span></a>
+    (click)="navigateHome()"><span>{{role === 'User' ? 'Khách hàng  ' : role === 'Staff_bql' ? 'Ban Quản Lý' : role === 'Admin' ? 'Quản trị viên' : ''}}</span></a>
 </div>
 <nb-select [hidden]="true" [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
   <nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>
 </nb-select>
-<div *ngIf="this.role !== 'Admin' && this.role !== 'User'" class="header-container">
+<!-- <div *ngIf="this.role !== 'Staff_bql' && this.role !== 'User'" class="header-container">
   <button [routerLink]="'home'" style="width: 100px; height: 76px" mat-button>{{ 'HEADER.HOME' | translate }}</button>
   <button [routerLink]="'homestay'" style="width: 100px; height: 76px" mat-button>Cơ sở</button>
   <button [routerLink]="'house'" style="width: 100px; height: 76px" mat-button>Nhà</button>
@@ -16,15 +17,15 @@
   <button [routerLink]="'about'" style="width: 110px; height: 76px" mat-button>{{ 'HEADER.ABOUT' | translate }}</button>
   <button [routerLink]="'contact'" style="width: 100px; height: 76px"
     mat-button>{{ 'HEADER.CONTACT' | translate }}</button>
-</div>
+</div> -->
 <div class="header-container">
   <nb-actions size="small">
-    <nb-action *ngIf="this.role === 'Admin' || this.role === 'User'" class="control-item">
+    <nb-action *ngIf="this.role === 'Staff_bql' || this.role === 'User'" class="control-item">
       <nb-search type="rotate-layout" placeholder="Tìm kiếm"></nb-search>
     </nb-action>
-    <nb-action *ngIf="this.role === 'Admin' || this.role === 'User'" class="control-item" icon="email-outline">
+    <nb-action *ngIf="this.role === 'Staff_bql' || this.role === 'User'" class="control-item" icon="email-outline">
     </nb-action>
-    <nb-action *ngIf="this.role === 'Admin' || this.role === 'User'" class="control-item" icon="bell-outline">
+    <nb-action *ngIf="this.role === 'Staff_bql' || this.role === 'User'" class="control-item" icon="bell-outline">
     </nb-action>
     <nb-action class="user-action" *nbIsGranted="['view', 'user']">
       <nb-user [nbContextMenu]="this.role ? userMenu : userMenu2" nbContextMenuTag="my-context-menu" [onlyPicture]=""
